--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/a0e09f9c3e.js" crossorigin="anonymous"></script>
+
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
